<resources>
    <string name="app_name">SharedPreferences</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone No</string>
    <string name="text_save">Save User</string>
    <string name="text_clear">Clear User</string>
    <string name="text_admin">Admin</string>
    <string name="text_user">User</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Welcome to \nAndroid Tutorials Examen</string>
    <string name="text_accounts">User</string>
    <string name="hint_password">password</string>
</resources>
